# webinars

./: README.md
CMake/: CMakeLists.txt  README.md
CMake/demo1/: CMakeLists.txt
CMake/demo2/: CMakeLists.txt  config.h.in  demo2.cpp  hello.cpp
CMake/demo2/mathlib/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
CMake/demo3/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
CMake/spreadsheet/: .cproject  .project  CMakeLists.txt  README.md  cell.cpp  cell.h  finddialog.cpp  finddialog.h  gotocelldialog.cpp  gotocelldialog.h  main.cpp  mainwindow.cpp  mainwindow.h  sortdialog.cpp  sortdialog.h  spreadsheet.cpp  spreadsheet.h  spreadsheet.pro  spreadsheet_de.ts  spreadsheet_fr.ts
GPIO/: GPIO.pro  README.md
GPIO/ButtonDebounce/: ButtonDebounce.pro  gpioin.cpp  gpioin.h  gpioout.h  trafficlightdevice.cpp  trafficlightdevice.h
GPIO/ButtonInterrupt/: ButtonInterrupt.pro  gpioin.cpp  gpioin.h  main.qml  trafficlight.cpp  trafficlightdevice.h
GPIO/ButtonPolling/: ButtonPolling.pro  gpioin.cpp  gpioin.h  gpioout.cpp  main.cpp  trafficlightdevice.cpp  trafficlightdevice.h
GPIO/DHT/: DHT.pro
GPIO/DHT/testDHT.imx6/: ColibriRegControl.cpp  ColibriRegControl.h  GpioBasic.cpp  GpioBasic.h  common_dht_read.c  common_dht_read.h  main.cpp  testDHT.imx6.pro
GPIO/DHT/testDHT.rpi/: common_dht_read.c  pi_2_dht_read.c  pi_2_dht_read.h  pi_2_mmio.c  pi_2_mmio.h  testDHT.rpi.pro  test_dht_read.c  test_dht_read.h
GPIO/LightControl/: LightControl.pro  gpioout.cpp  trafficlight.h  trafficlightdevice.cpp  trafficlightdevice.h
GPIO/sol-toggleled/: sol-toggleled.pro  toggleled.c  toggleled.cpp
QtSerialBus/: QtSerialBus.pro  README.md
QtSerialBus/canbusexample/: canbusexample.pro  main.cpp
QtSerialBus/canbusguiexample/: canbusguiexample.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtSerialBus/modbusexample/: main.cpp  modbusexample.pro
QtSerialBus/modbusguiexample/: mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusguiexample.pro
